--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,7 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				// "GitHub.vscode-github-actions"
+				"GitHub.vscode-github-actions"
 			],
 			"settings": {
 				"go.toolsEnvVars": {
